Add top_emitters for top emitting individuals
